Minify files #ignore

--- a/assets/rhau-admin.css
+++ b/assets/rhau-admin.css
@@ -1,21 +1,1 @@
-@charset "UTF-8";
-#submitdiv:not(.rhau-enabled) input[type=submit] {
-  visibility: hidden;
-  pointer-events: none;
-}
-
-#wpadminbar #wp-admin-bar-delete-cache .ab-icon:before {
-  content: "";
-  top: 1px;
-}
-
-.rhau-icon--info {
-  color: rgba(0, 0, 0, 0.3);
-}
-@media screen and (hover: hover), screen and (min--moz-device-pixel-ratio: 0), screen and (-ms-high-contrast: none) {
-  .rhau-icon--info:hover {
-    color: rgba(0, 0, 0, 0.7);
-  }
-}
-
-/*# sourceMappingURL=rhau-admin.css.map */
+@charset "UTF-8";#submitdiv:not(.rhau-enabled) input[type=submit]{visibility:hidden;pointer-events:none}#wpadminbar #wp-admin-bar-delete-cache .ab-icon:before{content:"";top:1px}.rhau-icon--info{color:rgba(0,0,0,.3)}@media screen and (-ms-high-contrast:none),screen and (hover:hover),screen and (min--moz-device-pixel-ratio:0){.rhau-icon--info:hover{color:rgba(0,0,0,.7)}}
