Include environments module

--- a/assets-src/scss/rhau.scss
+++ b/assets-src/scss/rhau.scss
@@ -1,5 +1,5 @@
 @import './inc/mixins';
-@import './inc/qtranslate';
+@import './modules/qtranslate';
 
 #submitdiv:not(.rhau-enabled) {
   input[type="submit"]  {
