--- a/assets-src/scss/modules/qtranslate.scss
+++ b/assets-src/scss/modules/qtranslate.scss
@@ -2,21 +2,16 @@
 * Qtranslate Admin Language Switcher
 */
 .qtranxs-lang-switch-wrap {
-  position: fixed;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 159900 - 1;
-  width: auto;
-  height: 32px; // wpadminbar height
-  display: flex !important;
-  color: #fff;
+  display: none;
+}
+#rhau-lsbs .qtranxs-lang-switch-wrap {
+  display: flex;
 }
 .post-php #wp-admin-bar-language,
 #qtranxs-meta-box-lsb {
   display: none !important;
 }
-.qtranxs-lang-switch {
+#rhau-lsbs .qtranxs-lang-switch {
   cursor: pointer;
   padding: 0 0.5em;
   margin: 0;
@@ -25,16 +20,15 @@
   display: flex;
   align-items: center;
 }
-.qtranxs-lang-switch:hover,
-.qtranxs-lang-switch.active {
-  color: #fff;
-  background: #32373c;
+#rhau-lsbs .qtranxs-lang-switch:hover,
+#rhau-lsbs .qtranxs-lang-switch.active {
+  color: #fff !important;
+  background: #2271b1 !important;
 }
-.qtranxs-lang-switch:hover {
-  color: #00b9eb;
-}
-.qtranxs-lang-switch img {
-  display: none;
+
+#rhau-lsbs .qtranxs-lang-switch img {
+  margin-right: 0.4em;
+
 }
 
 /*
