Optimizations for `edit-user.php`

--- a/assets-src/scss/rhau.scss
+++ b/assets-src/scss/rhau.scss
@@ -1,6 +1,7 @@
 @import './inc/mixins';
 @import './modules/qtranslate';
 @import './modules/acf';
+@import './modules/user-forms';
 
 #submitdiv:not(.rhau-enabled) {
   input[type="submit"]  {
