Prevent admin ads from Limit Login Attempts Reloaded

--- a/assets-src/scss/rhau.scss
+++ b/assets-src/scss/rhau.scss
@@ -2,6 +2,7 @@
 @import './modules/qtranslate';
 @import './modules/acf';
 @import './modules/user-forms';
+@import './modules/limit-login-attempts-reloaded';
 
 #submitdiv:not(.rhau-enabled) {
   input[type="submit"]  {
