Build assets #ignore

--- a/assets/rhau-environment-links.css
+++ b/assets/rhau-environment-links.css
@@ -1,156 +1,1 @@
-/*!********************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js!./assets-src/scss/modules/rhau-environment-links.scss ***!
-  \********************************************************************************************************************************************************************************************************************/
-rhau-environment-links {
-  -webkit-animation: none 0s ease 0s 1 normal none running;
-          animation: none 0s ease 0s 1 normal none running;
-  -webkit-backface-visibility: visible;
-          backface-visibility: visible;
-  background: transparent none repeat 0 0 / auto auto padding-box border-box scroll;
-  border: medium none currentColor;
-  border-collapse: separate;
-  border-image: none;
-  border-radius: 0;
-  border-spacing: 0;
-  bottom: auto;
-  box-shadow: none;
-  box-sizing: content-box;
-  caption-side: top;
-  clear: none;
-  clip: auto;
-  color: #000;
-  -webkit-columns: auto;
-          columns: auto;
-  -webkit-column-count: auto;
-          column-count: auto;
-  -webkit-column-fill: balance;
-          column-fill: balance;
-  -webkit-column-gap: normal;
-          column-gap: normal;
-  -webkit-column-rule: medium none currentColor;
-          column-rule: medium none currentColor;
-  -webkit-column-span: 1;
-          column-span: 1;
-  -webkit-column-width: auto;
-          column-width: auto;
-  content: normal;
-  counter-increment: none;
-  counter-reset: none;
-  cursor: auto;
-  direction: ltr;
-  display: inline;
-  empty-cells: show;
-  float: none;
-  font-family: serif;
-  font-size: medium;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  font-stretch: normal;
-  line-height: normal;
-  height: auto;
-  -webkit-hyphens: none;
-          hyphens: none;
-  left: auto;
-  letter-spacing: normal;
-  list-style: disc outside none;
-  margin: 0;
-  max-height: none;
-  max-width: none;
-  min-height: 0;
-  min-width: 0;
-  opacity: 1;
-  orphans: 2;
-  outline: medium none invert;
-  overflow: visible;
-  overflow-x: visible;
-  overflow-y: visible;
-  padding: 0;
-  page-break-after: auto;
-  page-break-before: auto;
-  page-break-inside: auto;
-  -webkit-perspective: none;
-          perspective: none;
-  -webkit-perspective-origin: 50% 50%;
-          perspective-origin: 50% 50%;
-  position: static;
-  right: auto;
-  tab-size: 8;
-  table-layout: auto;
-  text-align: left;
-  text-align-last: auto;
-  text-decoration: none;
-  text-indent: 0;
-  text-shadow: none;
-  text-transform: none;
-  top: auto;
-  -webkit-transform: none;
-          transform: none;
-  -webkit-transform-origin: 50% 50% 0;
-          transform-origin: 50% 50% 0;
-  -webkit-transform-style: flat;
-          transform-style: flat;
-  transition: none 0s ease 0s;
-  unicode-bidi: normal;
-  vertical-align: baseline;
-  visibility: visible;
-  white-space: normal;
-  widows: 2;
-  width: auto;
-  word-spacing: normal;
-  z-index: auto;
-  all: initial;
-  background: rgba(0, 0, 0, 0.8);
-  padding: 25px;
-  white-space: nowrap;
-  font-size: 70px;
-  border-radius: 80px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: 1000000000;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-  translate: -50% -50%;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  scale: 0;
-  visibility: hidden;
-  transition: scale 200ms ease-out, visibility 0ms 200ms;
-}
-
-@media print {
-  .rhau-environment-links {
-    display: none !important;
-  }
-}
-rhau-environment-links.is-visible {
-  visibility: visible;
-  scale: 1;
-  transition: scale 200ms;
-  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-rhau-environment-link {
-  cursor: pointer;
-  -webkit-appearance: none;
-          appearance: none;
-  font-family: sans-serif;
-  font-weight: bold;
-  color: #fff;
-  display: block;
-  margin: 0;
-  text-decoration: none;
-  height: 1.6em;
-  line-height: 1.55;
-  padding: 0 0.5em;
-  border-radius: 0.8em;
-  border: 3px dashed transparent;
-}
-rhau-environment-link:hover, rhau-environment-link:focus {
-  outline: none !important;
-  box-shadow: none !important;
-}
-rhau-environment-link:hover, rhau-environment-link:focus {
-  border-color: #fff;
-}
+rhau-environment-links{-webkit-animation:none 0s ease 0s 1 normal none running;animation:none 0s ease 0s 1 normal none running;-webkit-backface-visibility:visible;backface-visibility:visible;background:transparent none repeat 0 0 / auto auto padding-box border-box scroll;border:medium none currentColor;border-collapse:separate;border-image:none;border-radius:0;border-spacing:0;bottom:auto;box-shadow:none;box-sizing:content-box;caption-side:top;clear:none;clip:auto;color:#000;-webkit-columns:auto;columns:auto;-webkit-column-count:auto;column-count:auto;-webkit-column-fill:balance;column-fill:balance;-webkit-column-gap:normal;column-gap:normal;-webkit-column-rule:medium none currentColor;column-rule:medium none currentColor;-webkit-column-span:1;column-span:1;-webkit-column-width:auto;column-width:auto;content:normal;counter-increment:none;counter-reset:none;cursor:auto;direction:ltr;display:inline;empty-cells:show;float:none;font-family:serif;font-size:medium;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;line-height:normal;height:auto;-webkit-hyphens:none;hyphens:none;left:auto;letter-spacing:normal;list-style:disc outside none;margin:0;max-height:none;max-width:none;min-height:0;min-width:0;opacity:1;orphans:2;outline:medium none invert;overflow:visible;overflow-x:visible;overflow-y:visible;padding:0;page-break-after:auto;page-break-before:auto;page-break-inside:auto;-webkit-perspective:none;perspective:none;-webkit-perspective-origin:50% 50%;perspective-origin:50% 50%;position:static;right:auto;tab-size:8;table-layout:auto;text-align:left;text-align-last:auto;text-decoration:none;text-indent:0;text-shadow:none;text-transform:none;top:auto;-webkit-transform:none;transform:none;-webkit-transform-origin:50% 50% 0;transform-origin:50% 50% 0;-webkit-transform-style:flat;transform-style:flat;transition:none 0s ease 0s;unicode-bidi:normal;vertical-align:baseline;visibility:visible;white-space:normal;widows:2;width:auto;word-spacing:normal;z-index:auto;all:initial;background:rgba(0,0,0,.8);padding:25px;white-space:nowrap;font-size:70px;border-radius:80px;position:fixed;top:50%;left:50%;z-index:1000000000;text-shadow:2px 2px 10px rgba(0,0,0,.4);translate:-50% -50%;display:flex;align-items:center;gap:10px;scale:0;visibility:hidden;transition:scale 200ms ease-out,visibility 0ms 200ms}@media print{.rhau-environment-links{display:none !important}}rhau-environment-links.is-visible{visibility:visible;scale:1;transition:scale 200ms;transition-timing-function:cubic-bezier(0.175, 0.885, 0.32, 1.275)}rhau-environment-link{cursor:pointer;-webkit-appearance:none;appearance:none;font-family:sans-serif;font-weight:bold;color:#fff;display:block;margin:0;text-decoration:none;height:1.6em;line-height:1.55;padding:0 .5em;border-radius:.8em;border:3px dashed rgba(0,0,0,0)}rhau-environment-link:hover,rhau-environment-link:focus{outline:none !important;box-shadow:none !important}rhau-environment-link:hover,rhau-environment-link:focus{border-color:#fff}
