--- a/assets/rhau-admin.css
+++ b/assets/rhau-admin.css
@@ -1,130 +1,1 @@
-/*!******************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js!./assets-src/scss/rhau.scss ***!
-  \******************************************************************************************************************************************************************************************/
-/*
-* Qtranslate Admin Language Switcher
-*/
-.qtranxs-lang-switch-wrap {
-  display: none;
-}
-
-#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch-wrap {
-  display: flex;
-}
-
-.post-php #wp-admin-bar-language,
-#qtranxs-meta-box-lsb {
-  display: none !important;
-}
-
-#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch {
-  cursor: pointer;
-  padding: 0 0.5em;
-  margin: 0;
-  line-height: 1;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch:hover,
-#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch.active {
-  color: #fff !important;
-  color: var(--rhau-button-primary-color, #fff) !important;
-  background: #2271b1 !important;
-  background: var(--rhau-button-primary-background, #2271b1) !important;
-}
-
-#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch img {
-  margin-right: 0.4em;
-}
-
-/*
-* Qtranslate Options Page
-*/
-.qtranxs-form-table #option_lsb_style > td,
-.qtranxs-form-table #option_highlight_mode > td {
-  opacity: 0.5;
-  pointer-events: none;
-  -webkit-user-select: none;
-          user-select: none;
-}
-
-/*
-* compatibility with acf-autosize
-*/
-.acf-field-qtranslate-wysiwyg .multi-language-field > .acf-editor-wrap:not(.current-language),
-.acf-field-qtranslate-textarea .multi-language-field > textarea:not(.current-language) {
-  position: absolute !important;
-  width: 100% !important;
-  top: 0 !important;
-  left: -10000px !important;
-  visibility: hidden !important;
-  pointer-events: none !important;
-  display: block !important;
-}
-
-.acf-hidden {
-  display: block !important;
-  position: fixed !important;
-}
-
-.acf-hidden {
-  /* I only needed this to overwrite ACF's default style for .acf-hidden: */
-  /* Take the element out of the stacking context: */
-}
-
-/* Remove tab focus and pointer events from the acf-field and all it's children */
-.acf-hidden,
-.acf-hidden * {
-  pointer-events: none !important;
-  visibility: hidden !important;
-}
-
-.user-edit-php #your-profile > h2,
-.user-edit-php .user-rich-editing-wrap,
-.user-edit-php .user-url-wrap,
-.user-edit-php .user-description-wrap,
-.user-edit-php .user-comment-shortcuts-wrap,
-.user-edit-php .show-admin-bar, .user-edit-php.hide-application-passwords .application-passwords {
-  display: none;
-}
-
-#submitdiv:not(.rhau-enabled) input[type=submit] {
-  visibility: hidden;
-  pointer-events: none;
-}
-
-#wp-admin-bar-rhau-delete-cache .ab-icon:before {
-  content: "\f182";
-  top: 1px;
-}
-
-#wp-admin-bar-rh-publish > .ab-item.is-disabled,
-#wp-admin-bar-rh-save > .ab-item.is-disabled {
-  pointer-events: none;
-  opacity: 0.5;
-}
-
-.rhau-icon--info {
-  color: rgba(0, 0, 0, 0.3);
-}
-@media screen and (hover: hover), screen and (min--moz-device-pixel-ratio: 0), screen and (-ms-high-contrast: none) {
-  .rhau-icon--info:hover {
-    color: rgba(0, 0, 0, 0.7);
-  }
-}
-
-/*
-* Desaturate overwritten options on options-discussion.php
-*/
-.options-discussion-php [for=default_comment_status],
-.options-discussion-php [for=close_comments_for_old_posts],
-.options-discussion-php [for=close_comments_days_old],
-.options-discussion-php [for=comment_registration],
-.options-discussion-php [for=default_ping_status] {
-  opacity: 0.2;
-  pointer-events: none;
-  -webkit-user-select: none;
-          user-select: none;
-}
+.qtranxs-lang-switch-wrap{display:none}#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch-wrap{display:flex}.post-php #wp-admin-bar-language,#qtranxs-meta-box-lsb{display:none !important}#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch{cursor:pointer;padding:0 .5em;margin:0;line-height:1;height:100%;display:flex;align-items:center}#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch:hover,#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch.active{color:#fff !important;color:var(--rhau-button-primary-color, #fff) !important;background:#2271b1 !important;background:var(--rhau-button-primary-background, #2271b1) !important}#wp-admin-bar-rhau-lsbs .qtranxs-lang-switch img{margin-right:.4em}.qtranxs-form-table #option_lsb_style>td,.qtranxs-form-table #option_highlight_mode>td{opacity:.5;pointer-events:none;-webkit-user-select:none;user-select:none}.acf-field-qtranslate-wysiwyg .multi-language-field>.acf-editor-wrap:not(.current-language),.acf-field-qtranslate-textarea .multi-language-field>textarea:not(.current-language){position:absolute !important;width:100% !important;top:0 !important;left:-10000px !important;visibility:hidden !important;pointer-events:none !important;display:block !important}.acf-hidden{display:block !important;position:fixed !important}.acf-hidden,.acf-hidden *{pointer-events:none !important;visibility:hidden !important}.user-edit-php #your-profile>h2,.user-edit-php .user-rich-editing-wrap,.user-edit-php .user-url-wrap,.user-edit-php .user-description-wrap,.user-edit-php .user-comment-shortcuts-wrap,.user-edit-php .show-admin-bar,.user-edit-php.hide-application-passwords .application-passwords{display:none}#submitdiv:not(.rhau-enabled) input[type=submit]{visibility:hidden;pointer-events:none}#wp-admin-bar-rhau-delete-cache .ab-icon:before{content:"";top:1px}#wp-admin-bar-rh-publish>.ab-item.is-disabled,#wp-admin-bar-rh-save>.ab-item.is-disabled{pointer-events:none;opacity:.5}.rhau-icon--info{color:rgba(0,0,0,.3)}@media screen and (hover: hover),screen and (min--moz-device-pixel-ratio: 0),screen and (-ms-high-contrast: none){.rhau-icon--info:hover{color:rgba(0,0,0,.7)}}.options-discussion-php [for=default_comment_status],.options-discussion-php [for=close_comments_for_old_posts],.options-discussion-php [for=close_comments_days_old],.options-discussion-php [for=comment_registration],.options-discussion-php [for=default_ping_status]{opacity:.2;pointer-events:none;-webkit-user-select:none;user-select:none}
