Update environment links to use a native `dialog`

--- a/assets-src/scss/inc/mixins.scss
+++ b/assets-src/scss/inc/mixins.scss
@@ -1,8 +1,18 @@
 @mixin hoverSupport {
- @media screen and (hover: hover), screen and (min--moz-device-pixel-ratio: 0), screen and (-ms-high-contrast:none) { @content; }
+  @media screen and (hover: hover),
+    screen and (min--moz-device-pixel-ratio: 0),
+    screen and (-ms-high-contrast: none) {
+    @content;
+  }
 }
 @mixin hover {
- @media screen and (hover: hover), screen and (min--moz-device-pixel-ratio: 0), screen and (-ms-high-contrast:none) { &:hover { @content; } }
+  @media screen and (hover: hover),
+    screen and (min--moz-device-pixel-ratio: 0),
+    screen and (-ms-high-contrast: none) {
+    &:hover {
+      @content;
+    }
+  }
 }
 
 @mixin visually-hidden {
