--- a/assets-src/scss/modules/tinymce-plugins.scss
+++ b/assets-src/scss/modules/tinymce-plugins.scss
@@ -2,6 +2,6 @@
  * Optimize styles for the button from link-to-file.js
  */
 i.mce-i-rhau-link-to-file {
-  font-family: 'dashicons';
+  font-family: "dashicons";
   font-size: 20px;
 }
