--- a/assets-src/scss/inc/breakpoints.scss
+++ b/assets-src/scss/inc/breakpoints.scss
@@ -1,13 +1,12 @@
-
-$media-direction:       min;  // min / max — default is min (mobile first)
+$media-direction: min; // min / max — default is min (mobile first)
 
 $breakpoints: (
-  default:            '',
-  xs:                 480px,
-  s:                  667px,
-  m:                  1024px,
-  l:                  1280px,
-  xl:                 1680px,
+  default: "",
+  xs: 480px,
+  s: 667px,
+  m: 1024px,
+  l: 1280px,
+  xl: 1680px,
 );
 
 /* --------------------------------------------------
@@ -20,10 +19,8 @@ $breakpoints: (
 // Das macht Sinn wenn man mal einen speziellen Breakpoint braucht. Den muss man dann nicht zwingend in die Sass Map packen.
 // $direction: $media-direction = das was ihr in den Settings eingestellt habt.
 @mixin bp($breakpoint, $direction: $media-direction) {
-
   // Es wird gecheckt ob der Wert in der Sass Map vorhanden ist
   @if map-has-key($breakpoints, $breakpoint) {
-
     // Ausgabe
     @media (#{$direction}-width: #{map-get($breakpoints, $breakpoint)}) {
       @content;
