--- a/assets-src/scss/rhau.scss
+++ b/assets-src/scss/rhau.scss
@@ -1,11 +1,11 @@
-@import './inc/mixins';
-@import './modules/qtranslate';
-@import './modules/acf';
-@import './modules/user-forms';
-@import './modules/tinymce-plugins';
+@import "./inc/mixins";
+@import "./modules/qtranslate";
+@import "./modules/acf";
+@import "./modules/user-forms";
+@import "./modules/tinymce-plugins";
 
 #submitdiv:not(.rhau-enabled) {
-  input[type="submit"]  {
+  input[type="submit"] {
     visibility: hidden;
     pointer-events: none;
   }
@@ -20,9 +20,9 @@
   opacity: 0.5;
 }
 .rhau-icon--info {
-  color: rgba(0,0,0,0.3);
+  color: rgba(0, 0, 0, 0.3);
   @include hover {
-    color: rgba(0,0,0,0.7);
+    color: rgba(0, 0, 0, 0.7);
   }
 }
 
@@ -30,11 +30,11 @@
 * Desaturate overwritten options on options-discussion.php
 */
 .options-discussion-php {
-  [for=default_comment_status],
-  [for=close_comments_for_old_posts],
-  [for=close_comments_days_old],
-  [for=comment_registration],
-  [for=default_ping_status] {
+  [for="default_comment_status"],
+  [for="close_comments_for_old_posts"],
+  [for="close_comments_days_old"],
+  [for="comment_registration"],
+  [for="default_ping_status"] {
     opacity: 0.2;
     pointer-events: none;
     user-select: none;
