--- a/assets-src/environment-links/environment-links.scss
+++ b/assets-src/environment-links/environment-links.scss
@@ -34,18 +34,18 @@
 }
 
 rhau-environment-link {
-  cursor: pointer;
-  appearance: none;
-  font-family: sans-serif;
-  font-weight: bold;
-  color: #fff;
-  display: block;
-  margin: 0;
-  text-decoration: none;
-  height: 1.6em;
-  line-height: 1.55;
-  padding: 0 0.5em;
-  border-radius: 0.8em;
+  cursor: pointer !important;
+  appearance: none !important;
+  font-family: sans-serif !important;
+  font-weight: bold !important;
+  color: #fff !important;
+  display: block !important;
+  margin: 0 !important;
+  text-decoration: none !important;
+  height: 1.6em !important;
+  line-height: 1.55 !important;
+  padding: 0 0.5em !important;
+  border-radius: 0.8em !important;
   border: 3px dashed transparent;
   &:hover,
   &:focus {
